--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!--Хедер-->
   <header class="page-header">
     <!--Панель навигации в хедере-->
-    <div class="container page-header-flex""> 
+    <div class="container page-header-flex"> 
     <nav class="page-nav">
       <a href="./index.html" class="logo-header"> <span class="logo-accent">Web</span>Studio </a>
 
@@ -498,13 +498,87 @@
   <!-- Модальное окно -->
 
   
-    <div class="backdrop is-hidden" data-modal>
+    <!-- НЕ ЗАБУДЬ ДОКИНУТЬ is-hidden!!!  -->
+    <div class="backdrop" data-modal>
       <div class="modal-window">
         <button class="modal-close-button" type="button" data-modal-close>
           <svg class="icon-close" width="18px" height="18px">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+
+        <form class="modal-form">
+          <label class="modal-field">
+            <span class="modal-input-name">Ім'я</span>
+              <span class="form-input-wrapper">
+              <input 
+              type="text" 
+              class="modal-input" 
+              name="user_name"
+              required
+              />
+                <svg class="input-field-icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </span>
+          </label>
+
+          <label class="modal-field">
+            <span class="modal-input-name">Телефон</span>
+            <span class="form-input-wrapper">
+              <input 
+              type="tel" 
+              class="modal-input" 
+              name="user_phone"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="Введіть номер у форматі xxx-xxx-xx-xx"
+              required
+              />
+              <svg class="input-field-icon" width="18px" height="18px">
+              <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </span>
+
+          </label>
+
+          <label class="modal-field">
+            <span class="modal-input-name">Пошта</span>
+            <span class="form-input-wrapper">
+              <input 
+              type="email" 
+              class="modal-input" 
+              name="user_email"
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+              />
+              <svg class="input-field-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="modal-comment">
+            <span class="modal-input-name">Коментар</span>
+            <textarea 
+              name="user_comment" 
+              class="modal-comment-area" 
+              placeholder="Введіть текст"></textarea>
+          </label>
+
+          <label class="modal-checkbox">
+            <input 
+            class="terms-checkbox" 
+            type="checkbox" 
+            required
+            name="user_terms"
+            />
+            <span class="terms-text">Погоджуюся з розсилкою та приймаю 
+              <a class="terms-link" href="#">Умови договору</a></span>
+          </label>
+
+          <button class="submit-button" type="submit">Відправити</button>
+        </form>
       </div>
     </div>
     
