--- a/index.html
+++ b/index.html
@@ -519,9 +519,9 @@
 
   <!-- Модальное окно -->
 
-  <!-- is-hidden -->
+ 
     
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button class="modal-close-button" type="button" data-modal-close>
           <svg class="icon-close" width="18px" height="18px">
