Вносит все правки в ДЗ 6

--- a/index.html
+++ b/index.html
@@ -488,8 +488,6 @@
       </ul>
     </div>
 
-    </div>
-
     <!-- Форма отправки e-mail -->
     <form class="subscribe-form">
       
@@ -497,7 +495,7 @@
 
       <label class="subscribe-label">
         <input
-          type="mail"
+          type="email"
           class="subscribe-text-input"
           name="subscribe_email"
           pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
@@ -511,6 +509,10 @@
         </svg>
       </button>
     </form>
+
+    </div>
+
+    
 
   </footer>
 
